--- a/ContactUsPage_style.css
+++ b/ContactUsPage_style.css
@@ -223,7 +223,7 @@ li {
     margin: 0 auto;
     height: auto;
     width: 100%;
-    background-image: url('photos/Background/open\ road\ \(2\).jpg');
+    background-image: url('Background/open\ road\ \(2\).jpg');
     background-size: cover;
     background-position: center;
     display: flex;
